# BatchImageResizer-rs

./: Cargo.toml  README.md
html/: app.js  index.html  jquery-3.slim.min.js  semantic.min.css  styles.css
src/: imgproc2.rs  main.rs
